--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
+  "crons": [
+    {
+      "path": "/api/cron/cleanup",
+      "schedule": "30 18 * * *"
+    }
+  ],
   "functions": {
     "src/app/api/**/*.ts": {
       "runtime": "vercel-node@2.0.0",
